Combo boxes might be editable (Android accessibility)

A more comprehensive fix is coming here:
https://chromium-review.googlesource.com/c/chromium/src/+/642056

This is just a smaller patch in the meantime that fixes the
critical usability issue on Android - when a text field has a
role of combo box we're not treating it as editable text so
TalkBack doesn't support cursoring through it.

This affects the google.com search box.

Bug: 761501
Change-Id: I7473f7a61e0b082b3c26ad86361a5e1463aad5e8
Reviewed-on: https://chromium-review.googlesource.com/647339
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499829}
Former-commit-id: 7a1987ec20dbb890a2e57ae33cb5013e5235e468